Sistema de reservas criado

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
 body {
-    background-color: rgb(183, 255, 0);
+    background-color: rgb(140, 198, 242);
+}   
+
+input[type="text"], input[type="password"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
+}
+
+select[type="text"], input[type="password"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
+}
+
+form {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
 }
